--- a/T-MVP-master/app/src/main/res/layout/activity_about.xml
+++ b/T-MVP-master/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.ui.article.ArticleActivity">
+    tools:context="com.ui.view.ArticleActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
